completed active states for desktop

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /design
-/bookmark-landing-page-master
-README-template
-style-guide
+bookmark-landing-page-master.zip
+README-template.md
+style-guide.md
+README.md
